# CMake-Debian

./: CMakeLists.txt  README.md  main.cpp
cmake/: BuildPackage.cmake  ConfigFile.cmake  PackageCMakeLists.txt.in
module1/: CMakeLists.txt
module2/: CMakeLists.txt
